# neural-network

./: .gitignore  README.md  README.rst  pyproject.toml
ai_wine_quality_regression/: main.py
ai_wine_quality_regression/objects/: Functions.py  Layer.py  NeuralNetwork.py
data/: sonar-test.csv  sonar.all-data:Zone.Identifier  sonar.csv  test.csv  winequality-white.csv
models/: xor-new.nn  xor-old.nn  xor.nn
src/: input_data.py  main-old.py  main.py  mnist.py  sonar.py
src/objects/: Functions.py  Layer.py  NeuralNetwork.py
tests/: test_ai_wine_quality_regression.py
