[tool.poetry]
name = "ai-wine-quality-regression"
version = "0.1.0"
description = ""
authors = ["Nicholas Lai Jin Yung <nicklai88@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
